Deep 'namespacing' the popover and fixing a JS bug

--- a/public/less/cg-default-theme.less
+++ b/public/less/cg-default-theme.less
@@ -63,14 +63,14 @@
 			margin: 0;
 			padding: 0;
 
-			.title {
+			.comment-genius-title {
 				border-bottom: 1px solid #ccc;
 				font-size: 20px;
 				font-weight: bold;
 				line-height: 40px;
 				margin: 0;
 
-				.close-btn {
+				.comment-genius-close-btn {
 					border-radius: 6px;
 					color: @textColor;
 					float: right;
@@ -87,7 +87,7 @@
 
 			}
 
-			.content-inner {
+			.comment-genius-content-inner {
 				list-style: none;
 				margin: 0;
 				max-height: 300px;
@@ -95,20 +95,20 @@
 				overflow-y: auto;
 				padding: 0;
 
-				.no-comments {
+				.comment-genius-no-comments {
 					font-style: italic;
 					padding: 8px 16px;
 					text-align: center;
 				}
 
-				.comment {
+				.comment-genius-comment {
 					padding: 8px 16px;
 
 					&:nth-child(odd) {
 						background: #eee;
 					}
 
-					.avatar {
+					.comment-genius-avatar {
 						vertical-align: middle;
 					}
 
@@ -122,50 +122,57 @@
 				}
 			}
 
-			.footer {
+			.comment-genius-footer {
 				border-top: 1px solid #ccc;
 
-				.add-comment-form {
+				.comment-genius-add-comment-form {
 					margin: 20px 0;
 
-					.add-comment-text, .add-comment-name, .add-comment-email {
+					.comment-genius-add-comment-text,
+					.comment-genius-add-comment-name,
+					.comment-genius-add-comment-email {
 						box-sizing: border-box;
 						-moz-box-sizing: border-box;
 						-webkit-box-sizing: border-box;
 						height: 30px;
 					}
 
-					.add-comment-text {
+					.comment-genius-add-comment-text {
 						width: 100%;
 					}
 
-					.add-comment-name {
+					.comment-genius-add-comment-name {
 						float: left;
 					}
-					.add-comment-email {
+					.comment-genius-add-comment-email {
 						float: right;
 					}
 
-					.add-comment-name, .add-comment-email {
+					.comment-genius-add-comment-name,
+					.comment-genius-add-comment-email {
 						width: 49%;
 					}
 
-					.submit-btn {
+					.comment-genius-submit-btn {
 						.btn;
 					}
 
-					.add-comment-name, .add-comment-email, .submit-btn {
+					.comment-genius-add-comment-name,
+					.comment-genius-add-comment-email,
+					.comment-genius-submit-btn {
 						display: none;
 					}
 
 					&.active {
 						margin-bottom: 0;
 
-						.add-comment-text {
+						.comment-genius-add-comment-text {
 							height: 110px;
 						}
 
-						.add-comment-name, .add-comment-email, .submit-btn {
+						.comment-genius-add-comment-name,
+						.comment-genius-add-comment-email,
+						.comment-genius-submit-btn {
 							display: inline-block;
 						}
 
@@ -173,7 +180,7 @@
 
 				}
 
-				.copyright {
+				.comment-genius-copyright {
 					bottom: 8px;
 					color: #ddd;
 					position: absolute;
